tests/warn/coercion.jo
def coercion =
  // char
  val c: Char = 'a'
  println c

  // int
  val i: Int = 100
  val c_i: Char = i     // error
